Another round of generic delinting
* Removing more "raw type" and "unchecked assignment" style warnings
* The "spam of warnings" is now almost small enough to live with in all builds
* Until TrackPair is generic there is not much more can be fixed